--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_home"
+        android:id="@+id/displayTasksActivity2"
         android:icon="@drawable/home"
-        android:title="Home"/>
+        android:title="Display Tasks"/>
+    <item
+        android:id="@+id/nav_calendar"
+        android:icon="@drawable/ic_calendar"
+        android:title="Calendar"/>
+    <item
+        android:id="@+id/addTasksActivity"
+        android:icon="@drawable/ic_add"
+        android:title="Add Task"/>
 
 </menu>
