--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
+    android:padding="40dp"
     tools:context=".WelcomeActivity">
 
     <Button
@@ -13,6 +15,8 @@
         android:layout_marginBottom="84dp"
         android:text="Next"
         android:onClick="showData"
+        android:fontFamily="@font/roboto_bold"
+        app:backgroundTint="@color/purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -21,8 +25,10 @@
         android:id="@+id/textView"
         android:layout_width="136dp"
         android:layout_height="47dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="172dp"
+        android:fontFamily="@font/roboto_bold"
         android:text="Welcome"
+        android:textColor="@color/lightGray"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
