--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -4,5 +4,9 @@
         android:id="@+id/nav_home"
         android:icon="@drawable/home"
         android:title="Home"/>
+    <item
+        android:id="@+id/nav_calendar"
+        android:icon="@drawable/ic_baseline_calendar_today_24"
+        android:title="Calendar"/>
 
 </menu>
