Revert "Calendar implemented to the navbar"
This reverts commit 54de5e5476df7e3b46b3a12399b72e3d095aa97b.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <!--<TextView
+    <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -100,6 +100,6 @@
         app:backgroundTint="@color/purple"
         app:layout_constraintEnd_toEndOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="@+id/textView4"
-        tools:layout_editor_absoluteY="563dp" />-->
+        tools:layout_editor_absoluteY="563dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
