--- a/app/src/main/res/layout/activity_display_tasks.xml
+++ b/app/src/main/res/layout/activity_display_tasks.xml
@@ -40,13 +40,14 @@
         android:orientation="horizontal"
         android:padding="5dp">
 
-        <TextView
-            android:id="@+id/taskCompletedText"
+        <Button
+            android:id="@+id/completeTaskButton"
             android:layout_width="0dp"
             android:layout_weight="4"
             android:layout_height="wrap_content"
-            android:text="Task completed: 0"
-            android:textColor="@color/white" />
+            android:onClick="completeTask"
+            android:text="complete"
+            />
         <Space
             android:layout_width="0dp"
             android:layout_height="1dp"
