--- a/app/src/main/res/layout/activity_display_tasks.xml
+++ b/app/src/main/res/layout/activity_display_tasks.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:textAlignment="center"
+    android:onClick="resetKey"
     tools:context=".DisplayTasksActivity">
 
     <TextView
