--- a/app/src/main/res/layout/activity_add_tasks.xml
+++ b/app/src/main/res/layout/activity_add_tasks.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,10 +16,7 @@
         android:fontFamily="@font/roboto_bold"
         app:backgroundTint="@color/purple"
         android:text="Back"
-        android:onClick="goBack"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:onClick="goBack" />
 
     <TextView
         android:id="@+id/addTaskText"
@@ -29,11 +26,7 @@
         android:text="Add your Task"
         android:textAlignment="center"
         android:textColor="@color/lightGray"
-        android:textSize="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="30dp"/>
 
     <Button
         android:id="@+id/addTaskButton"
@@ -43,10 +36,7 @@
         android:text="Add Task"
         android:fontFamily="@font/roboto_bold"
         app:backgroundTint="@color/purple"
-        android:onClick="addTask"
-        app:layout_constraintBottom_toTopOf="@+id/backButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:onClick="addTask"/>
 
     <EditText
         android:id="@+id/editTextTaskNameText"
@@ -54,11 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="160dp"
         android:text="Task Name"
-        android:textColor="@color/lightGray"
-        app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="@color/lightGray"/>
 
     <EditText
         android:id="@+id/editTextPriorityText"
@@ -66,12 +52,13 @@
         android:layout_height="43dp"
         android:layout_marginTop="60dp"
         android:ems="10"
-        android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTaskNameText" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:inputType="number"/>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        app:backgroundTint="@color/purple"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="1dp"
+        app:menu="@menu/bottom_navigation" />
+</RelativeLayout>
