--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -21,24 +21,6 @@
         app:srcCompat="@mipmap/taskmaster_transparent_foreground" />
 
     <EditText
-        android:id="@+id/textUsername"
-        style="@style/editTextSettings"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="72dp"
-        android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/custom_user_icon"
-        android:drawablePadding="12dp"
-        android:ems="10"
-        android:hint="@string/username"
-        android:inputType="textEmailSubject"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <EditText
         android:id="@+id/textConfirmPassword"
         style="@style/editTextSettings"
         android:layout_width="match_parent"
@@ -106,7 +88,6 @@
         style="@style/editTextSettings"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="12dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/custom_email_icon"
         android:drawablePadding="12dp"
@@ -117,7 +98,7 @@
         android:paddingEnd="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textUsername" /><![CDATA[
+        app:layout_constraintTop_toBottomOf="@+id/imageView" /><![CDATA[
 
 
 
