--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -88,6 +88,7 @@
         style="@style/editTextSettings"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_marginTop="72dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/custom_email_icon"
         android:drawablePadding="12dp"
