--- a/app/src/main/res/layout/activity_add_tasks.xml
+++ b/app/src/main/res/layout/activity_add_tasks.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,7 +16,10 @@
         android:fontFamily="@font/roboto_bold"
         app:backgroundTint="@color/purple"
         android:text="Back"
-        android:onClick="goBack" />
+        android:onClick="goBack"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/addTaskText"
@@ -26,7 +29,11 @@
         android:text="Add your Task"
         android:textAlignment="center"
         android:textColor="@color/lightGray"
-        android:textSize="30dp"/>
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/addTaskButton"
@@ -36,7 +43,10 @@
         android:text="Add Task"
         android:fontFamily="@font/roboto_bold"
         app:backgroundTint="@color/purple"
-        android:onClick="addTask"/>
+        android:onClick="addTask"
+        app:layout_constraintBottom_toTopOf="@+id/backButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editTextTaskNameText"
@@ -44,7 +54,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="160dp"
         android:text="Task Name"
-        android:textColor="@color/lightGray"/>
+        android:textColor="@color/lightGray"
+        app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editTextPriorityText"
@@ -52,13 +66,12 @@
         android:layout_height="43dp"
         android:layout_marginTop="60dp"
         android:ems="10"
-        android:inputType="number"/>
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        app:backgroundTint="@color/purple"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="1dp"
-        app:menu="@menu/bottom_navigation" />
-</RelativeLayout>
+        android:inputType="number"
+        app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTaskNameText" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
