--- a/app/src/main/res/layout/activity_task_parcelable.xml
+++ b/app/src/main/res/layout/activity_task_parcelable.xml
@@ -8,15 +8,28 @@
 
     <TextView
         android:id="@+id/taskName"
-        android:layout_width="237dp"
-        android:layout_height="58dp"
+        android:layout_width="178dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="36dp"
+        android:text="TextView"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/taskDate"
+        android:layout_width="128dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="36dp"
         android:text="TextView"
         android:textColor="@color/white"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.175"
+        app:layout_constraintStart_toEndOf="@+id/taskName"
         app:layout_constraintTop_toTopOf="parent" />
 
 
