--- a/app/src/main/res/layout/activity_display_tasks.xml
+++ b/app/src/main/res/layout/activity_display_tasks.xml
@@ -28,6 +28,7 @@
         android:layout_width="407dp"
         android:layout_height="434dp"
         android:layout_below="@+id/taskTitleText"
+        android:textColor="@color/white"
         >
 
 
