--- a/app/src/main/res/layout/activity_display_task_details.xml
+++ b/app/src/main/res/layout/activity_display_task_details.xml
@@ -22,11 +22,12 @@
         android:id="@+id/deleteTaskButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="244dp"
-        android:onClick="removeTask"
+        android:layout_marginBottom="248dp"
         android:text="Delete Task"
+        android:onClick = "removeTask"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.544"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
