Revert "Added date"
This reverts commit c954425317ea941587f2c57278c778989990f4d8.

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -27,7 +27,7 @@
         android:layout_height="47dp"
         android:layout_marginTop="172dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="Welcome!"
+        android:text="Welcome"
         android:textColor="@color/lightGray"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
