--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -27,8 +27,8 @@
         android:layout_height="47dp"
         android:layout_marginTop="172dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="Welcome"
-        android:textColor="@color/lightGray"
+        android:text="Welcome!"
+        android:textColor="@color/white"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
