--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -12,9 +12,9 @@
         android:layout_height="wrap_content"
         />
 
-    <TimePicker
+    <!--<TimePicker
         android:id="@+id/timePicker1"
         android:layout_below="@id/calendarView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
 </RelativeLayout>
