--- a/app/src/main/res/layout/activity_add_tasks.xml
+++ b/app/src/main/res/layout/activity_add_tasks.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="44dp"
         android:text="Add your Task"
         android:textAlignment="center"
-        android:textColor="@color/lightGray"
+        android:textColor="@color/white"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="164dp"
         android:text="Task Name"
-        android:textColor="@color/lightGray"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
@@ -65,8 +65,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="304dp"
-        android:text="Time"
-        android:textColor="@color/lightGray"
+        android:text="Date"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
