--- a/app/src/main/res/layout/activity_add_tasks.xml
+++ b/app/src/main/res/layout/activity_add_tasks.xml
@@ -48,35 +48,39 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+
     <EditText
         android:id="@+id/editTextTaskNameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="164dp"
-        android:text="Enter task name here"
-        android:textColor="@color/white"
+        android:layout_width="171dp"
+        android:layout_height="46dp"
+        android:layout_marginBottom="288dp"
+        android:background="@drawable/cal"
+        android:text="Task Name"
+        android:textAlignment="center"
+        android:textColor="@color/lightGray"
         app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editTimeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="304dp"
-        android:text="Date"
-        android:textColor="@color/white"
+        android:layout_width="209dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="156dp"
+        android:background="@drawable/cal"
+        android:text="Time"
+        android:textAlignment="center"
+        android:textColor="@color/lightGray"
         app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-    
 
     <Button
         android:id="@+id/calButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="300dp"
+        android:layout_marginBottom="144dp"
         android:fontFamily="@font/roboto_bold"
         android:onClick="calendar"
         android:text="Calendar"
