--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="100dp"
         android:text="Select a Date"
         android:textAlignment="center"
-        android:textColor="@color/lightGray"
+        android:textColor="@color/white"
         android:layout_centerHorizontal="true"
         android:textSize="30dp"/>
 
